# justscram

./: .gitignore  CMakeLists.txt  LICENSE  README  compat.h  compile.sh  messages.c  passwords.c  pkcs5_pbkdf2.c  scram.c  scram.h  sha1.c  testscram.c
base64/: base64.c  base64.h
compat/: arc4random.c  arc4random.h  compat.h  compat_win.c  explicit_bzero.c  getentropy_linux.c  getentropy_osx.c  sha.h  sha512.c
crypto/: hmac_sha1.c  hmac_sha1.h  pkcs5_pbkdf2.c  pkcs5_pbkdf2.h  sha1.c  sha1.h
